--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,73 @@
 
 body{
   font-family: "Figtree", sans-serif;
+  background-color: var(--Yellow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 100vh;
+}
+
+main{
+  background-color: var(--White);
+  width: 327px;
+  border-radius: 20px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  border: solid 1px var(--Gray-950);
+  box-shadow: 8px 8px 0 #000;
+  color: var(--Gray-950);
+
+  & img{
+    border-radius: 10px;
+  }
+
+  & article{
+    line-height: 150%;
+
+    & span{
+      margin: 0;
+      font-size: 12px;
+      background-color: var(--Yellow);
+      padding: 4px 12px;
+      border-radius: 4px;
+      font-weight: bolder;
+    }
+  
+    & .date{
+      font-size: 12px;
+      font-weight:lighter;
+      margin: 12px 0;
+    }
+
+    & h2{
+      font-size: 20px;
+      font-weight: bolder;
+    }
+
+    & .content{
+      color: var(--Gray-500);
+      font-size: 14px;
+      margin: 0;
+    }
+  }
+
+  & div{
+    display: flex;
+    align-items: center;
+
+    & img{
+      width: 32px;
+      margin-right: 12px;
+    }
+
+    & span{
+      font-size: 14px;
+      font-weight: bolder;
+    }
+  }
+
 }
